[package]
name = "casper-private-auction-installer"
version = "0.9.0"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
casper-private-auction-core = { path = "../casper-private-auction-core"}

#[[bin]]
#name = "casper-private-auction-installer"
#path = "src/main.rs"
#bench = false
#doctest = false
#test = false

[[bin]]
name = "dutch-auction-installer"
path = "src/dutch.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "english-auction-installer"
path = "src/english.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "swap-installer"
path = "src/swap.rs"
bench = false
doctest = false
test = false