[package]
name = "gift-installer"
version = "0.9.0"
authors = ["Nim Siriwardana <nim@metacask.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-private-auction-core = { path = "../casper-private-auction-core"}

[[bin]]
name = "gift-installer"
path = "src/gift.rs"
bench = false
doctest = false
test = false